# sw-api

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  cloudbuild.yaml  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt  swagger-api-gateway.yaml
.github/workflows/: deploy.yml
src/starwars_api/: cache.py  main.py  test_handler.py
src/starwars_api/cache/: __init__.py  cache.py  cache_instance.py  warmup_service.py
src/starwars_api/enums/: order_enum.py
src/starwars_api/routes/: __init__.py  auth_router.py  swapi_router.py
src/starwars_api/routes/dto/: __init__.py  films_filter_dto.py  people_filter_dto.py  person_filter_dto.py  planets_filter_dto.py  species_filter_dto.py  starships_filter_dto.py  starships_filtes_dto.py  vehicles_filter_dto.py
src/starwars_api/services/: auth_service.py  swapi_service.py
src/starwars_api/util/: __init__.py  naming.py  resolve_name_fields.py  sorting.py
tests/: conftest.py  test_auth_service.py  test_routes.py  test_routes_fixed.py  test_swapi_service.py  test_utils.py  test_working.py
