[project]
name = "starwars-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Mario Henrique",email = "mariohenriquelp@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0" 
dependencies = [
    "fastapi (>=0.115.14,<0.116.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "ruff (>=0.12.2,<0.13.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "fastapi-cache2 (>=0.2.2,<0.3.0)",
    "redis (>=6.2.0,<7.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "starwars_api", from = "src"}]


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.35.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
